<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.alex.meca500</groupId>
    <artifactId>meca500-sim</artifactId>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <javafx.version>21</javafx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>

<!-- Source: https://mvnrepository.com/artifact/us.ihmc/jimStlMeshImporterJFX -->
<dependency>
    <groupId>us.ihmc</groupId>
    <artifactId>jimStlMeshImporterJFX</artifactId>
    <version>0.7</version>
    <scope>compile</scope>
</dependency>

    </dependencies>
 
 <build>
    <plugins>
        <plugin>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-maven-plugin</artifactId>
            <version>0.0.8</version>
            <configuration>
                <mainClass>com.alex.meca500.Launcher</mainClass>
                <options>
                    <option>--enable-native-access=ALL-UNNAMED</option>
                    <option>--sun-misc-unsafe-memory-access=allow</option>
                </options>
            </configuration>
        </plugin>
    </plugins>
</build>

</project>
